    * File conflicts are detected in the database, not just in the filesystem
    * Conary will no longer allow multiple troves to own a file
    * Rollbacks of troves that are local cooks will no longer raise 
      a TroveIntegrityError
    * Conary doesn't traceback in conary remove when the filename passed
      cannot be unlinked (bz #887)

Changes in 1.0.11:
  o Client Changes:
    * Conary will now allow generic options to be placed before the command
      you are giving to conary.  For example, 'conary --root=/foo query'
      will now work.
    * the remove command no longer removes file tags from files for no good 
      reason
    * rollbacks now restore files from other troves which are replaced as part
      of an update (thanks to, say, --replace-files or identical contents)
    * --replace-files now marks files as owned by the trove which used to
      claim them
    * You can now kill conary with SIGUSR1 to make conary enter a debugger
      when you Ctrl-C (or a SIGINT is raised)
    * --debug-all now enters a debugger in more situations, including option
      parsing fails, and when you hit Ctrl-C.
    * added ccs2tar, which will convert most absolute changesets (like those
      that cook produces) into tarballs
    * Troves now don't require dependencies that are provided by themselves.
      As troves are built with this new behavior, it should significantly speed
      up dependency resolution.
    * added a script to recalculate the sha1s on a server (after a label
      rename, for instance)
    * added a script to calculate an md5 password (for use in an info recipe,
      for example)

  o Build Changes:
    * Conary now supports a saltedPassword option to r.User in user info-
      packages.  Full use of this option will require that a new shadow package
      be installed.

  o Bug Fixes:
    * command-line configurations now override context settings

  o Build Changes:

Changes in 1.0.10:
  o Client Changes